<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_marginBottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_play"
            style="@style/ButtonStyle"
            android:layout_marginLeft="@dimen/button_marginLeft"
            android:text="@string/play" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/iv_play"
            android:src="@drawable/play" />

        <Button
            android:id="@+id/button_pause"
            style="@style/ButtonStyle"
            android:layout_marginLeft="@dimen/button_marginLeft"
            android:text="@string/pause" />

        <ImageView
            android:id="@+id/iv_pause"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/iv_pause"
            android:src="@drawable/pause" />
    </LinearLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/list_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="@dimen/view_padding" />


</LinearLayout>